out.txt
   Compiling peaq-pallet-rbac v0.1.0 (/Users/talhadar/work/peaq-pallet-rbac/pallet)
error[E0308]: mismatched types
   --> pallet/src/lib.rs:56:48
    |
56  |                     Self::deposit_event($event(d));
    |                                                ^- help: try using a conversion method: `.to_vec()`
    |                                                |
    |                                                expected `Vec<Entity<_>>`, found `BoundedVec<Entity<...>, ...>`
...
254 |             dpatch_dposit!(Self::get_roles(&owner), Event::AllRolesFetched)
    |             ---------------------------------------------------------------
    |             |                                       |
    |             |                                       arguments to this enum variant are incorrect
    |             in this macro invocation
    |
    = note: expected struct `Vec<structs::Entity<_>>`
               found struct `frame_support::BoundedVec<structs::Entity<<T as pallet::Config>::EntityId>, <T as pallet::Config>::BoundedDataLen>`
note: tuple variant defined here
   --> pallet/src/lib.rs:153:9
    |
153 |         AllRolesFetched(Vec<Entity<T::EntityId>>),
    |         ^^^^^^^^^^^^^^^
    = note: this error originates in the macro `dpatch_dposit` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<structs::Entity<<T as pallet::Config>::EntityId>>: EncodeLike<frame_support::BoundedVec<structs::Entity<<T as pallet::Config>::EntityId>, <T as pallet::Config>::BoundedDataLen>>` is not satisfied
    --> pallet/src/lib.rs:1230:43
     |
1230 |             <RoleStore<T>>::insert(owner, roles);
     |             ----------------------        ^^^^^ the trait `EncodeLike<frame_support::BoundedVec<structs::Entity<<T as pallet::Config>::EntityId>, <T as pallet::Config>::BoundedDataLen>>` is not implemented for `Vec<structs::Entity<<T as pallet::Config>::EntityId>>`
     |             |
     |             required by a bound introduced by this call
     |
     = help: the following other types implement trait `EncodeLike<T>`:
               <Vec<u8> as EncodeLike<bytes::bytes::Bytes>>
               <Vec<T> as EncodeLike<VecDeque<U>>>
               <Vec<T> as EncodeLike<Vec<U>>>
               <Vec<T> as EncodeLike<&[U]>>
note: required by a bound in `frame_support::pallet_prelude::StorageMap::<Prefix, Hasher, Key, Value, QueryKind, OnEmpty, MaxValues>::insert`
    --> /Users/talhadar/.cargo/git/checkouts/substrate-4641d93f1ce0a102/13fbc72/frame/support/src/storage/types/map.rs:163:49
     |
163  |     pub fn insert<KeyArg: EncodeLike<Key>, ValArg: EncodeLike<Value>>(key: KeyArg, val: ValArg) {
     |                                                    ^^^^^^^^^^^^^^^^^ required by this bound in `StorageMap::<Prefix, Hasher, Key, Value, QueryKind, OnEmpty, MaxValues>::insert`

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `peaq-pallet-rbac` (lib) due to 2 previous errors
